--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -74,14 +74,15 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:padding="16dp"
+        android:backgroundTint="#795548"
         android:text="@string/switch_language"
         android:textSize="18sp" />
 
     <!-- 3. Export Data Button -->
     <Button
         android:id="@+id/exportDataSetting"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="400dp"
+        android:layout_height="67dp"
         android:layout_below="@id/switchLanguageBtn"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
